--- a/taskfile.yaml
+++ b/taskfile.yaml
@@ -21,6 +21,7 @@ tasks:
     - go vet ./...
 #    - staticcheck ./...
     - nilaway ./...
+    - errcheck ./...
 
   update:
     - go get gioui.org@latest
