--- a/taskfile.yaml
+++ b/taskfile.yaml
@@ -19,9 +19,9 @@ tasks:
 
   lint:
     - go vet ./...
-#    - staticcheck ./...
+    - staticcheck ./...
     - nilaway ./...
-    - errcheck ./...
+#    - errcheck ./...
 
   update:
     - go get gioui.org@latest
