--- a/taskfile.yaml
+++ b/taskfile.yaml
@@ -18,9 +18,8 @@ tasks:
     - gofumpt -w -l .
 
   lint:
-    - go vet ./...
-    - staticcheck ./...
-    - nilaway ./...
+    - golangci-lint run -v
+#    - nilaway ./...
 #    - errcheck ./...
 
   update:
